--- a/index.html
+++ b/index.html
@@ -3,31 +3,44 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Menú</title>
+<title>Menú - Selvaje Lodge Iguazú</title>
 <style>
 body {
     font-family: Arial, sans-serif;
     text-align: center;
     padding: 40px;
+    background-color: #f5f5f5;
 }
-button {
+h2 {
+    margin-bottom: 30px;
+}
+.button {
     display: block;
-    width: 250px;
+    width: 260px;
     margin: 20px auto;
-    padding: 15px;
+    padding: 16px;
     font-size: 18px;
+    background-color: #2e7d32;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    text-decoration: none;
+}
+.button:hover {
+    background-color: #1b5e20;
 }
 </style>
 </head>
 <body>
+
 <h2>Seleccione su menú</h2>
 
-<a href="MENU_ES_URL" target="_blank">
-<button>Menú en Español</button>
+<a class="button" href="https://drive.google.com/file/d/1-RSm8Uuc3JvqZ1eKCicqBQPdOjs5YLKK/view?usp=sharing" target="_blank">
+    Menú en Español
 </a>
 
-<a href="MENU_EN_URL" target="_blank">
-<button>Menu in English</button>
+<a class="button" href="https://drive.google.com/file/d/1y7AEEofuHcy9FbzxzGPaJMl478jcNmJG/view?usp=sharing" target="_blank">
+    Menu in English
 </a>
 
 </body>
